# turboquant

./: .gitignore  BUGS_FOUND.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: integration_guide.md
examples/: basic_usage.py
tests/: diagnose_bugs.py  test_engine.py  test_integration.py  test_validation.py
turboquant/: __init__.py
turboquant/backends/: __init__.py  base.py  blackwell.py  factory.py  hopper.py  pytorch.py  sglang.py  vllm.py
turboquant/core/: __init__.py  bitpacking.py  codebook.py  constants.py  engine.py  rotation.py
